[gd_scene load_steps=7 format=2]

[ext_resource path="res://Images/grey.png" type="Texture" id=1]
[ext_resource path="res://Fireplace.gd" type="Script" id=2]
[ext_resource path="res://Images/select.png" type="Texture" id=3]
[ext_resource path="res://Images/light.png" type="Texture" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 16, 16 )

[sub_resource type="CircleShape2D" id=2]
radius = 64.0

[node name="Fireplace" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="Clickable" type="Area2D" parent="." groups=[
"selectable",
]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Clickable"]
shape = SubResource( 1 )

[node name="select" type="Sprite" parent="."]
position = Vector2( 0.100586, 0.150314 )
scale = Vector2( 1.5, 1.5 )
texture = ExtResource( 3 )

[node name="Warmth" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Warmth"]
shape = SubResource( 2 )

[node name="Light" type="Light2D" parent="."]
texture = ExtResource( 4 )
texture_scale = 2.55
color = Color( 1, 0.858824, 0.552941, 1 )
shadow_enabled = true
[connection signal="input_event" from="Clickable" to="." method="_on_Clickable_input_event"]
[connection signal="mouse_entered" from="Clickable" to="." method="_on_Clickable_mouse_entered"]
[connection signal="mouse_exited" from="Clickable" to="." method="_on_Clickable_mouse_exited"]
[connection signal="body_entered" from="Warmth" to="." method="_on_Warmth_body_entered"]
[connection signal="body_exited" from="Warmth" to="." method="_on_Warmth_body_exited"]
